kustomize/components/cluster-utilities/argocd-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/component: argocd
